[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/inventory.png" type="Texture" id=1]
[ext_resource path="res://assets/Roach.png" type="Texture" id=2]
[ext_resource path="res://assets/BrownTrout.png" type="Texture" id=3]
[ext_resource path="res://assets/Pike.png" type="Texture" id=4]
[ext_resource path="res://Inventory.gd" type="Script" id=5]

[node name="Inventory" type="Node2D"]
script = ExtResource( 5 )

[node name="Inventory" type="TextureRect" parent="."]
margin_left = 120.176
margin_top = 38.8428
margin_right = 370.176
margin_bottom = 288.843
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Roach_count" type="Label" parent="."]
margin_left = 142.976
margin_top = 203.907
margin_right = 182.976
margin_bottom = 217.907
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Roach" type="TextureRect" parent="."]
margin_left = 146.324
margin_top = 177.108
margin_right = 183.324
margin_bottom = 208.108
texture = ExtResource( 2 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pike_count" type="Label" parent="."]
margin_left = 198.862
margin_top = 203.916
margin_right = 238.862
margin_bottom = 217.916
text = "2"
align = 1

[node name="Pike" type="TextureRect" parent="."]
margin_left = 201.115
margin_top = 175.851
margin_right = 238.115
margin_bottom = 206.851
texture = ExtResource( 4 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trout_count" type="Label" parent="."]
margin_left = 254.665
margin_top = 204.065
margin_right = 294.665
margin_bottom = 218.065
text = "3"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trout" type="TextureRect" parent="."]
margin_left = 257.171
margin_top = 176.309
margin_right = 294.171
margin_bottom = 207.309
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}
